// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Breadcrumb Advanced Breadcrumbs with options per data item 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <ol
        aria-label="Breadcrumb"
        css={[Function]}
      >
        <li>
          <div
            css={[Function]}
          >
            <a
              css={[Function]}
              href="/first-level"
              onClick={[Function]}
            >
              First Level
            </a>
            <span
              css={[Function]}
            >
              <span
                css={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "center",
                    "padding": "0.125rem",
                  }
                }
                onClick={[Function]}
              >
                <span
                  css={[Function]}
                />
              </span>
            </span>
          </div>
        </li>
        <li
          role="listitem"
          style={
            Object {
              "margin": "auto",
            }
          }
        >
          <div
            css={
              Object {
                "map": undefined,
                "name": "166u9ib",
                "next": undefined,
                "styles": "
  display: flex;
  cursor: pointer;
  position: relative;
",
                "toString": [Function],
              }
            }
          >
            <span
              css={[Function]}
              onClick={[Function]}
            >
              <span
                css={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "center",
                    "padding": "0.125rem",
                  }
                }
                onClick={[Function]}
              >
                <span
                  css={[Function]}
                />
              </span>
            </span>
            <span
              css={[Function]}
            >
              <span
                css={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "center",
                    "padding": "0.125rem",
                  }
                }
                onClick={[Function]}
              >
                <span
                  css={[Function]}
                />
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            css={[Function]}
          >
            <a
              css={[Function]}
              href="/forth-level"
              onClick={[Function]}
            >
              Forth Level
            </a>
            <span
              css={[Function]}
            >
              <span
                css={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "center",
                    "padding": "0.125rem",
                  }
                }
                onClick={[Function]}
              >
                <span
                  css={[Function]}
                />
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            css={[Function]}
          >
            <div
              role="button"
            >
              <div
                css={[Function]}
              >
                <button
                  css={[Function]}
                  data-testid="button"
                  disabled={false}
                  onClick={[Function]}
                >
                  <span
                    css={[Function]}
                  >
                    <span
                      css={[Function]}
                    >
                      <span>
                        Fifth Level
                      </span>
                    </span>
                    <span
                      css={[Function]}
                    >
                      <span
                        css={
                          Object {
                            "alignItems": "center",
                            "display": "flex",
                            "justifyContent": "center",
                            "padding": "0.125rem",
                          }
                        }
                        onClick={[Function]}
                      >
                        <span
                          css={[Function]}
                        />
                      </span>
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </li>
      </ol>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Breadcrumb Breadcrumb showcase 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <button
          onClick={[Function]}
          type="button"
        >
          Add data to Breadcrumb
        </button>
        <ol
          aria-label="Breadcrumb"
          css={[Function]}
        >
          <li>
            <div
              css={[Function]}
            >
              <a
                css={[Function]}
                href="/first-level"
                onClick={[Function]}
              >
                First Level
              </a>
              <span
                css={[Function]}
              >
                <span
                  css={
                    Object {
                      "alignItems": "center",
                      "display": "flex",
                      "justifyContent": "center",
                      "padding": "0.125rem",
                    }
                  }
                  onClick={[Function]}
                >
                  <span
                    css={[Function]}
                  />
                </span>
              </span>
            </div>
          </li>
          <li
            role="listitem"
            style={
              Object {
                "margin": "auto",
              }
            }
          >
            <div
              css={
                Object {
                  "map": undefined,
                  "name": "166u9ib",
                  "next": undefined,
                  "styles": "
  display: flex;
  cursor: pointer;
  position: relative;
",
                  "toString": [Function],
                }
              }
            >
              <span
                css={[Function]}
                onClick={[Function]}
              >
                <span
                  css={
                    Object {
                      "alignItems": "center",
                      "display": "flex",
                      "justifyContent": "center",
                      "padding": "0.125rem",
                    }
                  }
                  onClick={[Function]}
                >
                  <span
                    css={[Function]}
                  />
                </span>
              </span>
              <span
                css={[Function]}
              >
                <span
                  css={
                    Object {
                      "alignItems": "center",
                      "display": "flex",
                      "justifyContent": "center",
                      "padding": "0.125rem",
                    }
                  }
                  onClick={[Function]}
                >
                  <span
                    css={[Function]}
                  />
                </span>
              </span>
            </div>
          </li>
          <li>
            <div
              css={[Function]}
            >
              <a
                css={[Function]}
                href="/forth-level"
                onClick={[Function]}
              >
                Forth Level
              </a>
              <span
                css={[Function]}
              >
                <span
                  css={
                    Object {
                      "alignItems": "center",
                      "display": "flex",
                      "justifyContent": "center",
                      "padding": "0.125rem",
                    }
                  }
                  onClick={[Function]}
                >
                  <span
                    css={[Function]}
                  />
                </span>
              </span>
            </div>
          </li>
          <li>
            <div
              css={[Function]}
            >
              <div
                role="button"
              >
                <div
                  css={[Function]}
                >
                  <button
                    css={[Function]}
                    data-testid="button"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <span
                      css={[Function]}
                    >
                      <span
                        css={[Function]}
                      >
                        <span>
                          Fifth Level
                        </span>
                      </span>
                      <span
                        css={[Function]}
                      >
                        <span
                          css={
                            Object {
                              "alignItems": "center",
                              "display": "flex",
                              "justifyContent": "center",
                              "padding": "0.125rem",
                            }
                          }
                          onClick={[Function]}
                        >
                          <span
                            css={[Function]}
                          />
                        </span>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </li>
        </ol>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Breadcrumb Simple Breadcrumbs 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <ol
        aria-label="Breadcrumb"
        css={[Function]}
      >
        <li>
          <div
            css={[Function]}
          >
            <div>
              First Level
            </div>
            <span
              css={[Function]}
            >
              <span
                css={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "center",
                    "padding": "0.125rem",
                  }
                }
                onClick={[Function]}
              >
                <span
                  css={[Function]}
                />
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            css={[Function]}
          >
            <div>
              Second Level
            </div>
            <span
              css={[Function]}
            >
              <span
                css={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "center",
                    "padding": "0.125rem",
                  }
                }
                onClick={[Function]}
              >
                <span
                  css={[Function]}
                />
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            css={[Function]}
          >
            <div>
              Third Level
            </div>
          </div>
        </li>
      </ol>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Breadcrumb Simple Breadcrumbs with options 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <ol
        aria-label="Breadcrumb"
        css={[Function]}
      >
        <li>
          <div
            css={[Function]}
          >
            <a
              css={[Function]}
              href="/first-level"
              onClick={[Function]}
            >
              First Level
            </a>
            <span
              css={[Function]}
            >
              <span
                css={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "center",
                    "padding": "0.125rem",
                  }
                }
                onClick={[Function]}
              >
                <span
                  css={[Function]}
                />
              </span>
            </span>
          </div>
        </li>
        <li
          role="listitem"
          style={
            Object {
              "margin": "auto",
            }
          }
        >
          <div
            css={
              Object {
                "map": undefined,
                "name": "166u9ib",
                "next": undefined,
                "styles": "
  display: flex;
  cursor: pointer;
  position: relative;
",
                "toString": [Function],
              }
            }
          >
            <span
              css={[Function]}
              onClick={[Function]}
            >
              <span
                css={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "center",
                    "padding": "0.125rem",
                  }
                }
                onClick={[Function]}
              >
                <span
                  css={[Function]}
                />
              </span>
            </span>
            <span
              css={[Function]}
            >
              <span
                css={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "center",
                    "padding": "0.125rem",
                  }
                }
                onClick={[Function]}
              >
                <span
                  css={[Function]}
                />
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            css={[Function]}
          >
            <a
              css={[Function]}
              href="/forth-level"
              onClick={[Function]}
            >
              Forth Level
            </a>
            <span
              css={[Function]}
            >
              <span
                css={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "center",
                    "padding": "0.125rem",
                  }
                }
                onClick={[Function]}
              >
                <span
                  css={[Function]}
                />
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            css={[Function]}
          >
            <a
              css={[Function]}
              href="/fifth-level"
              onClick={[Function]}
            >
              Fifth Level
            </a>
          </div>
        </li>
      </ol>
    </div>
  </div>
</div>
`;
